...
// Technical constants
private const val PROFILE_PIC_FILENAME = "profile_picture.jpg"
private const val MIME_TYPE_IMAGE = "image/*"

object SettingsScreenTestTags {
  const val PROFILE_PICTURE = "settings_profile_picture"
  const val USERNAME = "settings_username"
  const val EDIT_PHOTO_BUTTON = "settings_edit_photo_button"
  const val NAME_FIELD = "settings_name_field"
  const val BIRTHDAY_FIELD = "settings_birthday_field"
  const val SCHOOL_FIELD = "settings_school_field"
  const val SCHOOL_YEAR_FIELD = "settings_school_year_field"
  const val SAVE_BUTTON = "settings_save_button"
  const val USERNAME_ERROR = "settings_username_error"
  const val NAME_FIELD_ERROR = "settings_name_field_error"
  const val BIRTHDAY_FIELD_ERROR = "settings_birthday_field_error"
  const val PHOTO_PICKER_CAMERA_BUTTON = "settings_photo_picker_camera_button"
  const val PHOTO_PICKER_GALLERY_BUTTON = "settings_photo_picker_gallery_button"
  const val PHOTO_PICKER_CANCEL_BUTTON = "settings_photo_picker_cancel_button"
  const val PROFILE_PICTURE_URL_NOT_EMPTY = "settings_profile_picture_url_not_empty"
  const val GOOGLE_BUTTON = "google_button"
  const val USER_STATUS = "settings_user_status"
  const val STATUS_DIALOG = "status_dialog"
  const val OPTION_ONLINE = "status_option_online"
  const val OPTION_OFFLINE = "status_option_offline"
  const val OPTION_FOCUSED = "status_option_focused"
  const val CANCEL_BUTTON = "status_cancel"
...
