...
 * specific components.
 */
object HomePageScreenTestTags {
  const val UPCOMING_EVENTS_TITLE = "upcomingEventsTitle"
  const val UPCOMING_TASKS_TITLE = "upcomingTasksTitle"
  const val FOCUS_TIMER_TEXT = "focusTimerText"
  const val FOCUS_BUTTON = "focusButton"
  const val TASK_ITEM_PREFIX = "taskItem_"
  const val FRIENDS_SECTION = "friendsSection"
  const val MINI_MAP_CARD = "miniMapCard"
  const val FRIEND_AVATAR_PREFIX = "friendAvatar_"
  const val FRIEND_STATUS_PREFIX = "friendStatus_"
  const val EMPTY_TASK_LIST_TEXT_BUTTON = "emptyTaskListTextButton"
  const val ADD_FRIENDS_ICON = "addFriendsIcon"
  const val ADD_FRIENDS_TEXT = "addFriendsText"
...
